--- a/app/containers/EditProfile/styles.css
+++ b/app/containers/EditProfile/styles.css
@@ -3,3 +3,39 @@
   min-height: calc(100vh - 3.5rem);
   color: #4a4a4a;
 }
+
+.editProfile .marginContent {
+  width: 100%;
+  margin-left: 3rem;
+}
+
+.editProfile h2 {
+  font-size: 1.25rem;
+  letter-spacing: 0.25rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  margin: 0;
+  margin-top: 2rem;
+}
+
+.editProfile input {
+  width: 100%;
+  border-bottom: 0.1rem solid #d8d8d8;
+  font-size: 1.25rem;
+  padding: 0.5rem 0;
+  outline: none;
+}
+
+.editProfile input::-webkit-placeholder,
+.editProfile input::placeholder {
+  color: #d8d8d8;
+}
+
+.editProfile button {
+  color: #FFF;
+  margin-top: 3rem;
+  border-radius: 2rem;
+  font-size: 1.25rem;
+  padding: 0.75rem 5rem;
+  background: linear-gradient(227deg, #b4ec51, #429321);
+}
