--- a/app/components/Navlink/styles.css
+++ b/app/components/Navlink/styles.css
@@ -2,9 +2,9 @@
 .rightlink {
   font-size: 1rem;
   line-height: 1;
-  margin: 0.25rem 1rem;
   color: #FFF;
   text-decoration: none;
+  padding: 1rem;
 }
 
 .leftlink:hover,
@@ -13,8 +13,7 @@
 .rightlink:hover,
 .rightlink:focus,
 .rightlink:disabled {
-  margin: -1rem 0;
-  padding: 1.25rem 1rem;
+  height: 3rem;
   color: #3D3D3D;
   background: #E5D224;
   outline: none;
