--- a/app/containers/HomePage/styles.css
+++ b/app/containers/HomePage/styles.css
@@ -25,7 +25,7 @@
   width: 100%;
   height: 100%;
   position: relative;
-  min-height: 10rem;
+  min-height: 6rem;
 }
 
 .testimonyContentContainer {
@@ -136,7 +136,7 @@
   max-width: 1200px;
   margin: 0 auto;
   font-weight: 500;
-  font-size: 2.5rem;
+  font-size: 2rem;
 }
 
 .thirdPanel {
@@ -145,7 +145,7 @@
 }
 
 .thirdPanel h3 {
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: 700;
   color: #4a4a4a;
   margin-bottom: 2rem;
@@ -164,14 +164,14 @@
 }
 
 .fourthPanel h3 {
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: 700;
   margin: 3rem 0 5rem;
 }
 
 .testimonyText {
   font-style: italic;
-  font-size: 2rem;
+  font-size: 1.5rem;
   line-height: 1;
   margin: 0 0 4rem;
 }
@@ -184,8 +184,8 @@
 }
 
 .testimonyPicture {
-  width: 8rem;
-  height: 8rem;
+  width: 6rem;
+  height: 6rem;
   border-radius: 5rem;
   background: #333;
   object-fit: cover;
@@ -196,23 +196,28 @@
 .testimonyCred {
   display: inline-block;
   float: left;
+  text-align: left;
 }
 
 .testimonyName,
 .testimonyPosition {
-  margin-left: 2rem;
+  margin-left: 1rem;
 }
 
 .testimonyName {
-  margin-top: 1.75rem;
-  font-size: 2rem;
+  margin-top: 1.25rem;
+  font-size: 1.5rem;
   font-weight: 700;
   line-height: 1;
 }
 
+.testimonyPosition {
+  font-size: 1rem;
+}
+
 .testimonyDivider {
   width: 10%;
-  height: 0.1rem;
+  height: 1px;
   background: #232321;
   margin: 2rem auto;
 }
@@ -220,8 +225,8 @@
 .circleSelected,
 .circle {
   display: inline-block;
-  width: 1.5rem;
-  height: 1.5rem;
+  width: 1rem;
+  height: 1rem;
   border-radius: 1.5rem;
   margin: 0 1rem;
 }
