--- a/app/components/Navlink/styles.css
+++ b/app/components/Navlink/styles.css
@@ -9,10 +9,8 @@
 
 .leftlink:hover,
 .leftlink:focus,
-.leftlink:disabled,
 .rightlink:hover,
-.rightlink:focus,
-.rightlink:disabled {
+.rightlink:focus {
   height: 3rem;
   color: #3D3D3D;
   background: #E5D224;
