--- a/app/containers/EditProfile/styles.css
+++ b/app/containers/EditProfile/styles.css
@@ -18,6 +18,12 @@
   margin-top: 2rem;
 }
 
+.editProfile h3 {
+  font-size: 0.75rem;
+  margin-top: 0.25rem;
+  color: #bd3535;
+}
+
 .editProfile input {
   width: 100%;
   border-bottom: 0.1rem solid #d8d8d8;
