--- a/app/components/Navlink/styles.css
+++ b/app/components/Navlink/styles.css
@@ -25,3 +25,13 @@
 .rightlink {
   float: right;
 }
+
+
+@media screen and (max-width: 40em) {
+  .leftlink,
+  .rightlink {
+    font-weight: bold;
+    font-size: 1.25rem;
+    padding: 1rem 0.5rem;
+  }
+}
