--- a/app/containers/ApplyInternship/styles.css
+++ b/app/containers/ApplyInternship/styles.css
@@ -136,3 +136,46 @@
 .applyButton:disabled {
   background: #d1d1d1;
 }
+
+@media screen and (max-width: 64em) {
+	.content {
+		width: 100%;
+		height: 100%;
+		bottom: 0;
+		top: 0;
+		right: 0;
+		left: 0;
+		transform: none;
+		min-width: 0;
+	}
+
+	.header p,
+	.header h1 {
+		margin: 0;
+		font-size: 0.75rem;
+		float: none;
+		display: block;
+	}
+
+	.profile {
+		height: calc(100vh - 10rem);
+		padding: 2rem;
+		overflow: auto;
+	}
+
+	.profile button {
+		top: 1rem;
+		right: 2rem;
+	}
+
+	.overlay button {
+		top: 0;
+		right: 0;
+	}
+}
+
+@media screen and (min-width: 40em) and (max-width: 64em) {
+	.profile {
+		height: calc(100vh - 7rem);
+	}
+}
