--- a/app/containers/UserAccess/styles.css
+++ b/app/containers/UserAccess/styles.css
@@ -28,6 +28,23 @@
   height: 100%;
   min-height: 100vh;
   background: linear-gradient(211deg, #40403c, #090908);
+  position: relative;
+  overflow: auto;
+}
+
+.content h4 {
+  margin: 0;
+  margin-bottom: 0.25rem;
+  line-height: 1;
+  color: #FFF;
+  font-size: 0.75rem;
+  text-align: left;
+}
+
+.content h4.failCall {
+  text-align: center;
+  margin: 0;
+  margin-top: 0.5rem;
 }
 
 .hero h1 {
@@ -35,7 +52,7 @@
   font-weight: 700;
   line-height: 1;
   position: absolute;
-  top: 40%;
+  top: 50%;
   transform: translateY(-50%);
   color: #FFF;
 }
@@ -58,8 +75,14 @@
 }
 
 .contentContainer {
-  width: 40%;
+  width: 60%;
+  max-width: 20rem;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: inline-block;
+  padding: 2rem 0;
 }
 
 .input {
@@ -92,7 +115,6 @@
 .switchMenu {
   margin-top: 2rem;
 }
-
 .switchDivider {
   color: #FFF;
   font-weight: 700;
@@ -114,6 +136,7 @@
   line-height: 1;
   margin: 0;
   text-decoration: underline;
+  text-transform: capitalize;
 }
 
 .switchActive,
@@ -137,7 +160,6 @@
   font-weight: 700;
   display: inline-block;
   margin-top: 2rem;
-  margin-bottom: 1rem;
   border-radius: 4rem;
 }
 
@@ -147,6 +169,7 @@
 
 .linkedInButton {
   background: #FFF;
+  margin-top: 1rem;
 }
 
 .submitButton:hover,
@@ -171,6 +194,7 @@
   width: 100%;
   height: 0.5rem;
   border-bottom: 1px solid #FFF;
+  margin-top: 1rem;
 }
 
 .buttonDividerText {
@@ -178,6 +202,7 @@
   line-height: 1;
   margin: 0;
   color: #FFF;
+  margin-top: 1rem;
 }
 
 .linkedInLogo {
@@ -205,4 +230,54 @@
 
 .forgetPassword:hover {
   color: #CCC;
+}
+
+.scrollDownNotice {
+  color: #FFF;
+  position: absolute;
+  bottom: 5rem;
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 1rem;
+}
+
+@media screen and (max-width: 40em) {
+  .content {
+    height: auto;
+    overflow: none;
+    min-height: none;
+  }
+
+  .contentContainer {
+    width: 100%;
+    position: relative;
+    top: 0;
+    left: 0;
+    transform: none;
+    display: inline-block;
+    padding: 4rem 2rem;
+  }
+
+  .switchDivider {
+    color: #FFF;
+    font-weight: 700;
+    font-size: 1.5rem;
+    line-height: 1;
+    margin: 0;
+    opacity: 0.5;
+  }
+
+  .switchContainer {
+    display: inline-block;
+  }
+
+  .switchActive,
+  .switch {
+    font-size: 1.5rem;
+  }
+
+  .checkBox {
+    margin: 0 0.25rem 0 -3.25rem;
+  }
 }
