--- a/app/containers/Navbar/styles.css
+++ b/app/containers/Navbar/styles.css
@@ -8,9 +8,17 @@
 
 .logo {
   float: left;
-  color: #E5D224;
-  font-size: 1.25rem;
-  font-weight: 700;
-  line-height: 1;
-  margin: 1rem 1rem 0 0;
+  margin: 0.8rem 1rem 0 0.5rem;
+}
+
+.logoImg {
+  height: 1.5rem;
+  width: auto;
+  object-fit: contain;
+}
+
+@media screen and (max-width: 64em) {
+  .logo {
+    margin-right: 0.25rem;
+  }
 }
