latest version, up to date with deployed version with passing lint

--- a/app/components/Navlink/styles.css
+++ b/app/components/Navlink/styles.css
@@ -1,10 +1,18 @@
 .leftlink,
-.rightlink {
+.rightlink,
+.placeholder {
   font-size: 1rem;
   line-height: 1;
   color: #FFF;
   text-decoration: none;
   padding: 1rem;
+}
+
+.placeholder {
+  border-right: 1px solid #FFF;
+  height: 1.5rem;
+  padding-top: 0.25rem;
+  margin-top: 0.75rem;
 }
 
 .leftlink:hover,
@@ -22,10 +30,10 @@
   float: left;
 }
 
-.rightlink {
+.rightlink,
+.placeholder {
   float: right;
 }
-
 
 @media screen and (max-width: 40em) {
   .leftlink,
