--- a/app/containers/CariInternship/styles.css
+++ b/app/containers/CariInternship/styles.css
@@ -1,16 +1,16 @@
-.cariInternship { /* stylelint-disable */
+.cariInternship {
   min-height: calc(100vh - 3rem);
-  padding: 5rem 1rem 1rem;
+  padding: 8rem 1rem 1rem;
 }
 
 .sortBySelect {
   margin-top: 0.5rem;
 }
 
-.sectionTitle { /* stylelint-disable */
+.sectionTitle {
   font-size: 3rem;
   font-weight: 700;
   line-height: 1;
-  color: #4a4a4a;
+  color: #4A4A4A;
   margin-bottom: 1rem;
 }
