--- a/app/containers/Navbar/styles.css
+++ b/app/containers/Navbar/styles.css
@@ -1,4 +1,9 @@
 .navbar { /* stylelint-disable */
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 10;
   width: 100%;
   height: 3rem;
   background: #3D3D3D;
