--- a/app/containers/UserAccess/styles.css
+++ b/app/containers/UserAccess/styles.css
@@ -1,4 +1,5 @@
-.userAccessStudent { /* stylelint-disable */
+/* stylelint-disable */
+.userAccessStudent {
   width: 100%;
   min-height: 100vh;
   background: 
@@ -6,7 +7,7 @@
     url(containers/UserAccess/student.png);
 }
 
-.userAccessCompany { /* stylelint-disable */
+.userAccessCompany {
   width: 100%;
   min-height: 100vh;
   background: 
@@ -243,6 +244,10 @@
 }
 
 @media screen and (max-width: 40em) {
+  .hero h1 {
+    font-size: 3.25rem;
+  }
+
   .content {
     height: auto;
     overflow: none;
