fix manifest.json contents and favicons load, Add sirclo logo and Frans's testimony on home page, Add fontObserver

--- a/app/app.css
+++ b/app/app.css
@@ -25,6 +25,11 @@ html {
 body {
   margin: 0; }
 
+
+body.fontLoaded {
+  font-family: 'Circular Std', Helvetica, Arial, sans-serif;
+}
+
 /* HTML5 display definitions
      ========================================================================== */
 /**
